--- a/src/pages/abbout/Abboutt.css
+++ b/src/pages/abbout/Abboutt.css
@@ -1,109 +1,30 @@
-body {
+
+.car {
+    display:grid;
+    flex-direction: column;
 }
 
-.mision {
-    position:relative;
-    display:flex;
-    border-radius:3%;
-    width:max-content;
-    top:50px;
-    left:20%;
-    align-items:center;
-}
-    .mision .Mission {
-        top: 125px;
-        width:min-content;
+@media screen and (max-width: 1000px) {
+    .car {
+        width: 75%;
+        margin-left: 95px;
     }
-        .mision .Mission m1 {
-            position:relative;
-            top:-50%;
-            left:-30%;
-            width: 290px;
-            font-size:medium;
-            text-align: justify-all;
-            text-justify: inter-word;
-        }
-
-        .mision .Mission t1 {
-            position:relative;
-            top:-100%;
-            left:70%;
-            width: 290px;
-            font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-            font-size: large;
-            text-align: justify-all;
-            text-justify: inter-word;
-        }
-    .mision .Missionimg {
-    }
-
-.vision {
-    position: relative;
-    display: flex;
-    border-radius: 3%;
-    width: max-content;
-    top: 50px;
-    left: 30%;
-    align-items: center;
-}
-    .vision .visiontxt {
-        top: 125px;
-        width:30%;
-    }
-        .vision .visiontxt t1 {
-            position: relative;
-            font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-            left: 50%;
-            font-size: large;
-            text-align: justify-all;
-            text-justify: inter-word;
-        }
-
-        .vision .visiontxt v1 {
-            position:relative;
-            top:40px;
-            left:50px;
-            font-size:medium;
-            text-align: justify-all;
-            text-justify: inter-word;
-        }
-
-    .vision .Vissionimg {
-    }
-
-
-.about {
-    position: relative;
-    display: flex;
-    border-radius: 3%;
-    width: max-content;
-    top: 50px;
-    left: 20%;
-    align-items: center;
 }
 
-    .about .Abboutus {
-        position:relative;
-        top: 15px;
-        width:12%;
-        left:80px;
-    }
+.t1 {
+    font-size: 30px;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    color: #053780;
+}
 
-        .about .Abboutus u1 {
-            font-size: medium;
-            text-align: justify-all;
-            text-justify: inter-word;
-        }
+h4 {
+    font-size: 25px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    color: #F7AC15;
+}
 
-        .about .Abboutus t1 {
-            position: relative;
-            top:-50px;
-            left:450px;
-            font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-            font-size: large;
-            text-align: justify-all;
-            text-justify: inter-word;
-        }
-
-    .about .Abboutusimg {
-    }
+.text-muted {
+    font-size: 18px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    color: #000;
+}
