--- a/src/Components/encabezado/Encabezado.css
+++ b/src/Components/encabezado/Encabezado.css
@@ -1,299 +1,25 @@
-
 .App-logo {
-    height: 12vmin;
+    height: 25Vmin;
+}
+.logo {
+    font-size: 30px;
+    font-family: 'Fredoka One', cursive;
 }
 
-
-
-
-.itemlist  {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-    background-color: aliceblue;
-    position: fixed;
-    top: 0;
-    width: 100%;
-    z-index: 3;
+a1 {
+    font-size: 30px;
+    font-family: 'Fredoka One', cursive;
+}
+ho1 {
+    font-size: 30px;
+    font-family: 'Fredoka One', cursive;
+}
+work1 {
+    font-size: 30px;
+    font-family: 'Fredoka One', cursive;
+}
+.colab1 {
+    font-size: 30px;
+    font-family: 'Fredoka One', cursive;
 }
 
-.item {
-    float: right;
-}
-
-    .item h1 {
-        position:relative;
-        display: block;
-        color: black;
-        text-align: center;
-        font-size: 26px;
-        top: 13px;
-        padding: 14px 16px;
-        text-decoration: none;
-    }
-
-        .item h1:hover:not(.active) {
-            background-color: #111;
-        }
-        .item h1:hover {
-            cursor: pointer;
-            color: white;
-        }
-
-    .item .donate {
-        position: relative;
-        background-color: #4CAF50;
-        border-color: transparent;
-        border-radius: 30px;
-        display: block;
-        top: 25px;
-        padding: 5px 40px;
-    }
-
-    li .store {
-        position: relative;
-        background-color: #4CAF50;
-        border-color: transparent;
-        border-radius: 30px;
-        display: block;
-        top: 25px;
-        padding: 5px 40px;
-    }
-        li .store:hover {
-            animation: animateBg 7s linear infinite;
-            background-image: linear-gradient(0deg,#cf5c5c,#c19b4a,#def2a0,#c6ee4a,#42eca6,#64b3d9,#208ea2,#498ada,#5b73df,#897ed3,#cf5c5c,#c19b4a);
-            background-size: 100% 1100%;
-            border-color:transparent;
-            color: white;
-            font-weight: bold;
-        }
-
-.active {
-    background-color:aqua;
-}
-
-@keyframes animateBg {
-    0% {
-        background-position: 0% 0%;
-    }
-
-    100% {
-        background-position: 0% 100%;
-    }
-}
-
-@supports (display:flex ) {
-    @media screen and  (min-width:900px) {
-    }
-}
-
-
-/* Popup style */
-.popup-box {
-    position: fixed;
-    background: #00000050;
-    width: 100%;
-    height: 100vh;
-    top: 0;
-    left: 0;
-    z-index:4;
-}
-
-.box {
-    position: relative;
-    width: 70%;
-    margin: 0 auto;
-    height: auto;
-    max-height: 70vh;
-    margin-top: calc(100vh - 85vh - 20px);
-    background: #fff;
-    border-radius: 4px;
-    padding: 20px;
-    border: 1px solid #999;
-    overflow: auto;
-}
-
-.close-icon {
-    content: 'x';
-    cursor: pointer;
-    position: fixed;
-    right: calc(15% - 30px);
-    top: calc(100vh - 85vh - 33px);
-    background: #ededed;
-    width: 25px;
-    height: 25px;
-    border-radius: 50%;
-    line-height: 20px;
-    text-align: center;
-    border: 1px solid #999;
-    font-size: 20px;
-}
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-/*
-.nabar {
-    position: fixed;
-    top: 0%;
-    z-index: 2;
-    height: 100px;
-}
-
-| .nabar #sites App-logo {
-    position: relative;
-}
-
-.nabar #sites {
-    position: absolute;
-    left: 47%;
-    top: 12px;
-    width: fit-content;
-}
-
-    .nabar #sites #home {
-        position: relative;
-        left: 1260px;
-        top: 30px;
-        color: black;
-        font-family: 'Times New Roman', 'Times', 'serif';
-        font-size: x-large;
-    }
-
-        .nabar #sites #home:hover {
-            cursor: pointer;
-            opacity: 0;
-            background-color: rgb(159 159 159 / 0.60);
-            transition: 0.7s;
-            font-family: 'Helvetica Neue','Franklin Gothic Medium', 'Arial Narrow';
-        }
-
-    .nabar #sites #Abbout {
-        position: relative;
-        left: 1290px;
-        top: 30px;
-        right: 0px;
-        color: black;
-        font-family: 'Times New Roman', 'Times', 'serif';
-        font-size: x-large;
-    }
-
-        .nabar #sites #Abbout:hover {
-            cursor: pointer;
-            opacity: 0;
-            background-color: rgb(159 159 159 / 0.60);
-            transition: 0.7s;
-            font-family: 'Helvetica Neue','Franklin Gothic Medium', 'Arial Narrow';
-        }
-
-    .nabar #sites #charity {
-        position: relative;
-        left: 1320px;
-        top: 30px;
-        right: 0px;
-        color: black;
-        font-family: 'Times New Roman', 'Times', 'serif';
-        font-size: x-large;
-    }
-
-        .nabar #sites #charity:hover {
-            cursor: pointer;
-            opacity: 0;
-            background-color: rgb(159 159 159 / 0.60);
-            transition: 0.7s;
-            font-family: 'Helvetica Neue','Franklin Gothic Medium', 'Arial Narrow';
-        }
-
-    .nabar #sites #donate {
-        position: absolute;
-        top: 20px;
-        width: 200px;
-        border-radius: 25px;
-        color: aliceblue;
-        font-size: 20px;
-        transform: translateX(1400px);
-    }
-
-        .nabar #sites #donate span {
-            cursor: pointer;
-            display: inline-block;
-            position: relative;
-            transition: 0.5s;
-        }
-
-        .nabar #sites #donate:hover span {
-            padding-right: 25px;
-        }
-
-        .nabar #sites #donate span::after {
-            content: /;
-            position: absolute;
-            opacity: 0;
-            top: 0;
-            right: -20px;
-            transition: 0.5s;
-        }
-
-        .nabar #sites #donate:hover {
-            transition: 0.5s;
-        }
-
-            .nabar #sites #donate:hover span:after {
-                opacity: 1;
-                right: 0;
-            } 
-
-    .nabar #sites #store {
-        position: absolute;
-        top: 20px;
-        width: 200px;
-        border-radius: 25px;
-        color: aliceblue;
-        font-size: 20px;
-        transform: translateX(1400px);
-    }
-
-        .nabar #sites #store span {
-            cursor: pointer;
-            display: inline-block;
-            position: relative;
-            transition: 0.5s;
-        }
-
-        .nabar #sites #store:hover span {
-            padding-right: 45px;
-        }
-
-        .nabar #sites #store span::after {
-            content: /;
-            position: absolute;
-            opacity: 0;
-            top: 0;
-            right: -20px;
-            transition: 0.5s;
-        }
-
-    .nabar #sites #store:hover {
-        transition: 0.5s;
-    }
-
-        .nabar #sites #store:hover span:after {
-            opacity: 1;
-            right: 0;
-        }
-        */
