--- a/src/Components/pie/Pie.css
+++ b/src/Components/pie/Pie.css
@@ -1,3 +1,9 @@
+.pie {
+    position:relative;
+    transform:translateY(20px);
+    z-index:5;
+}
+
 .bio {
     font-size: 1.2em;
     font-weight: bold;
@@ -22,3 +28,4 @@ a {
 .gm {
     width: 3vmin;
 }
+
