--- a/src/pages/abbout/Abboutt.css
+++ b/src/pages/abbout/Abboutt.css
@@ -1,30 +1,107 @@
-
-.car {
-    display:grid;
-    flex-direction: column;
+.tex1 {
+    background-color:white;
+    font-size: 50px;
+    font-family: 'Fredoka One', cursive;
 }
 
-@media screen and (max-width: 1000px) {
-    .car {
-        width: 75%;
-        margin-left: 95px;
+.acerca {
+    margin-left: 12%;
+    display: flex;
+    flex-direction: row;
+    background-color: transparent;
+    height: fit-content;
+    background-color:white;
+}
+
+.tarjetas {
+    margin-left: 25%;
+    margin-top: 12%;
+    display: flex;
+    flex-direction: row;
+    background-color: transparent;
+    height: fit-content;
+}
+.card {
+    margin-left:5%;
+    box-shadow: 0px 0px 10px rgb(170,170, 170);
+    overflow: hidden;
+    border-radius: 15px;
+}
+
+.img1 img {
+    height: 260px;
+    border-top-right-radius: 15px;
+    border-top-left-radius: 15px;
+    width: 100%;
+}
+
+.img3 img {
+    height: 200px;
+    border-top-right-radius: 15px;
+    border-top-left-radius: 15px;
+    width: 100%;
+}
+
+.img2 img {
+    position: relative;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    z-index: 1;
+    width: 140px;
+    height: 140px;
+    border-radius: 50%;
+    border: 7px solid #fff;
+    margin-top: -80px;
+}
+
+.card:hover .img2 img {
+    border-color: rgb(250, 196, 47);
+    transition: .7s;
+}
+
+.main-text {
+    padding: 30px 0;
+    text-align: center;
+}
+
+    .main-text h2 {
+        text-transform: uppercase;
+        font-weight: 900;
+        font-size: 20px;
+        margin: 0 0 20px;
     }
-}
 
-.t1 {
-    font-size: 30px;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    .main-text p {
+        font-size: 15px;
+        padding: 0 35px;
+    }
+
+.main-text1 h3 {
+    font-size: 20px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     color: #053780;
 }
 
-h4 {
-    font-size: 25px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    color: #F7AC15;
+.main-text1 p {
+    font-size: 16px;
+    padding: 0 35px;
 }
 
-.text-muted {
-    font-size: 18px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    color: #000;
+@media screen and (max-width: 1000px) {
+    .tarjetas {
+        flex-direction: column;
+    }
+}
+
+@media screen and (max-width: 800px) {
+    .tarjetas {
+        flex-direction: column;
+    }
+}
+
+@media screen and (max-width: 600px) {
+    .tarjetas {
+        flex-direction: column;
+    }
 }
